# sast-cli

./: .gitignore  Cargo.toml  Dockerfile  README.md
apps/sast-cli/: Cargo.toml
apps/sast-cli/src/: main.rs
apps/xrayflow/: Cargo.toml
apps/xrayflow/src/: main.rs
crates/rbom/: Cargo.toml
crates/rbom/src/: lib.rs
crates/sast-c/: Cargo.toml
crates/sast-c/src/: cfg.rs  lib.rs  parser.rs  rule_engine.rs  rules.rs  taint.rs  tests.rs
crates/sast-c/src/rulesets/: command.rs  heap.rs  memory.rs  mod.rs  printf.rs  sprintf.rs  strcpy.rs
crates/sast-core/: Cargo.toml
crates/sast-core/src/: lib.rs  poc.rs
crates/sast-js/: Cargo.toml
crates/sast-js/src/: lib.rs
crates/sast-validator/: Cargo.toml
crates/sast-validator/src/: lib.rs  tests.rs
services/rbom-api/: Cargo.toml  Dockerfile
services/rbom-api/src/: main.rs
services/sast-api/: Cargo.toml  Dockerfile
services/sast-api/src/: main.rs
