[package]
name = "xrayflow"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "xrayflow"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = "1"
sast-core = { path = "../../crates/sast-core" }
sast-c = { path = "../../crates/sast-c" }
sast-js = { path = "../../crates/sast-js" }
sast-validator = { path = "../../crates/sast-validator" }
rbom = { path = "../../crates/rbom" }
walkdir = "2"
