[package]
name = "sast-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
rbom = { path = "../../crates/rbom" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sast-core = { path = "../../crates/sast-core" }
sast-c = { path = "../../crates/sast-c" }
sast-js = { path = "../../crates/sast-js" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
